2006-12-07  Conrad Sanderson  <conrad_s@users.sourceforge.net>

  * itpp/stat/mog_diag.h: fixed small typo

  * itpp/base/mat.h, itpp/base/mat.cpp: added elem_mult_out() etc


2006-12-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Conrad Sanderson added to the
	list of developers.

2006-12-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itmisc.h, itpp/stat/mog_generic.cpp,
	itpp/stat/mog_generic.h, itpp/stat/mog_diag_kmeans.cpp,
	itpp/stat/mog_diag.cpp, itpp/stat/mog_diag_em.cpp,
	itpp/stat/mog_diag_kmeans.h, itpp/stat/mog_diag.h,
	itpp/stat/mog_diag_em.h: Fixes in MOG classes related to
	compilation errors under Cygwin, Solaris and MSVC++ .NET. Thanks
	to Conrad Sanderson for providing patches.

	* configure.ac, itpp/config_msvc.h, itpp/base/bessel.cpp,
	itpp/base/bessel/jv.cpp, itpp/base/bessel/struve.cpp:
	Configuration changes related to MSVC++ .NET differences.

	* win32/itpp.vcproj: Include recently created statistics module
	sources.
	
==============================================================================

2006-12-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.7 released (SVN tag: release-3-10-7)
	(merged rev. 725:729 from the itpp-3-10 branch)

	* NEWS, TODO: Updated to reflect recent changes.
	(merged rev. 725:729 from the itpp-3-10 branch)

	* config/acx_blas.m4: Fixed a problem with detection of the ACML
	library on 64-bit platforms.
	(merged rev. 725:729 from the itpp-3-10 branch)

2006-12-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/index.doc.in: Updated SVN repository and bug tracker
	links.
	(merged rev. 725:729 from the itpp-3-10 branch)

2006-12-02  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/modulator_nd.*: changed short -> int 

2006-11-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itfixed.h, itpp/fixed/cfix.h, itpp/fixed/fixed.h,
	itpp/fixed/cfixed.h, itpp/fixed/fix_factory.h,